link color & cocontrast ixes #11 and fixes #8

--- a/css/party.css
+++ b/css/party.css
@@ -41,17 +41,23 @@ body > header > h3 {
 
 #more-info {
   padding: 80px 60px 80px 80px;
-  /*max-width: 600px;*/
   background:url(../img/triangle-bg-inverse.png);
   color: #ccccff;
   font-size: 1.5em;
   line-height: 1.2em;
 }
+
+#more-info a,
+#more-info a:link,
+#more-info a:visited,
+#more-info a:active {
+  color: #00C4FF;
+}
+
 .lead-in {
   font-size:2em;
   line-height: 1em;
-  color: #ccccff;
-  /*color:#F1BDFF;*/
+  color: #CCE8FF;
 }
 
 #sign-up > form > input {
@@ -90,9 +96,3 @@ footer {
   color:#ccccff;
   text-align:center;
 }
-
-/*a:link,
-a:visited,
-a:active {
-  color:red;
-}*/
